remoção da função collect